# segmented-linear-fit-encoder

./: CMakeLists.txt  README.md
docs/: README.md
files/: data1_length.csv  data2_length.csv  segmented_linear_fit.ipynb
files/VERIFICAR/: R2Bussines_Encoder.ipynb
qml/: Main.qml
qml/components/: NavButton.qml  PlotPanel.qml  PointTablePanel.qml
qml/pages/: CsvPage.qml  DataPage.qml  HomePage.qml  ManualPage.qml  ResultsPage.qml
src/: AppController.cpp  AppController.h  CodeExportService.cpp  CodeExportService.h  PointTableModel.cpp  PointTableModel.h  SegmentFitService.cpp  SegmentFitService.h
